Bug 1370177 - Treat compressed HTTP channels as having infinite length and as unseekable in media code. r=jwwang.

The problem here is that the server is setting the Content-Length to the size
of the gzipped file, which is confusing our media code as that's not the length
of the decompressed stream. Necko's decompressor is streaming, so we can't know
the length of the stream in advance unless we wait for the entire file to
download first. We also can't seek in compressed HTTP resources anyway.

So just have our code assume that compressed HTTP channels are of infinite
length and have un unseekable transport. Then we can seek in the buffered
regions at least.

MozReview-Commit-ID: 9SiLuMZGSeJ